[gd_scene load_steps=13 format=2]

[ext_resource path="res://nodes/vfx/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/themes/default.theme" type="Theme" id=2]
[ext_resource path="res://assets/themes/big_text.theme" type="Theme" id=3]
[ext_resource path="res://assets/sprites/ReadMe/readme_slide5.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ReadMe/readme_slide4.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ReadMe/readme_slide3.png" type="Texture" id=6]
[ext_resource path="res://scripts/readme/readme.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/ReadMe/readme_slide2.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ReadMe/readme_slide1.png" type="Texture" id=9]
[ext_resource path="res://scripts/readme/slideshow.gd" type="Script" id=10]
[ext_resource path="res://assets/audio/UI/snd_buttonPress.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/UI/snd_select.wav" type="AudioStream" id=12]

[node name="ReadMeMenu" type="Node2D"]
script = ExtResource( 7 )
sndSelect = ExtResource( 12 )
sndPress = ExtResource( 11 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 312.0
color = Color( 0.0705882, 0.054902, 0.129412, 0.901961 )

[node name="ResultText" type="Label" parent="ColorRect"]
anchor_right = 1.0
margin_left = 128.0
margin_right = -128.0
margin_bottom = 41.0
theme = ExtResource( 3 )
text = "- README - "
align = 1
valign = 1

[node name="UI" type="Control" parent="ColorRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = -48.0
margin_right = -56.0
margin_bottom = -8.0
theme = ExtResource( 2 )

[node name="BackButton" type="Button" parent="ColorRect/UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 88.0
margin_bottom = 10.0
text = "Back"

[node name="NextButton" type="Button" parent="ColorRect/UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -10.0
margin_bottom = 10.0
text = "Next"

[node name="Slideshow" type="Control" parent="ColorRect"]
margin_left = 64.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 256.0
theme = ExtResource( 2 )
script = ExtResource( 10 )
slides = [ NodePath("Slide1"), NodePath("Slide2"), NodePath("Slide3"), NodePath("Slide4"), NodePath("Slide5") ]

[node name="Slide1" type="Control" parent="ColorRect/Slideshow"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Slideshow/Slide1"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -96.0
margin_bottom = -32.0
bbcode_enabled = true
bbcode_text = "Revolve Engine 120 is a Score-attack style shooter.
Take control of your machine to circle around and shoot down incoming enemy horde!"
text = "Revolve Engine 120 is a Score-attack style shooter.
Take control of your machine to circle around and shoot down incoming enemy horde!"

[node name="Sprite" type="Sprite" parent="ColorRect/Slideshow/Slide1"]
texture = ExtResource( 9 )
centered = false

[node name="Slide2" type="Control" parent="ColorRect/Slideshow"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Slideshow/Slide2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -96.0
margin_bottom = -32.0
bbcode_enabled = true
bbcode_text = "[Arrow Keys] Move.
[SHIFT] Focus mode."
text = "[Arrow Keys] Move.
[SHIFT] Focus mode."

[node name="Sprite" type="Sprite" parent="ColorRect/Slideshow/Slide2"]
texture = ExtResource( 8 )
centered = false

[node name="Slide3" type="Control" parent="ColorRect/Slideshow"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Slideshow/Slide3"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -96.0
margin_bottom = -32.0
bbcode_enabled = true
bbcode_text = "[Z] Main Weapon
[X] Sub-Weapon (consumes XP on use)"
text = "[Z] Main Weapon
[X] Sub-Weapon (consumes XP on use)"

[node name="Sprite" type="Sprite" parent="ColorRect/Slideshow/Slide3"]
texture = ExtResource( 6 )
centered = false

[node name="Slide4" type="Control" parent="ColorRect/Slideshow"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Slideshow/Slide4"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -96.0
margin_bottom = -32.0
bbcode_enabled = true
bbcode_text = "Red Gems gives you XP for your Main Weapon.
Golden Medals gives you bonus score."
text = "Red Gems gives you XP for your Main Weapon.
Golden Medals gives you bonus score."

[node name="Sprite" type="Sprite" parent="ColorRect/Slideshow/Slide4"]
texture = ExtResource( 5 )
centered = false

[node name="Slide5" type="Control" parent="ColorRect/Slideshow"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/Slideshow/Slide5"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -96.0
margin_bottom = -32.0
bbcode_enabled = true
bbcode_text = "Your objective is to survive for 120 seconds.
Good luck!"
text = "Your objective is to survive for 120 seconds.
Good luck!"

[node name="Sprite" type="Sprite" parent="ColorRect/Slideshow/Slide5"]
texture = ExtResource( 4 )
centered = false

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="ColorRect/UI/BackButton" to="." method="button_focus_entered"]
[connection signal="pressed" from="ColorRect/UI/BackButton" to="." method="button_back"]
[connection signal="focus_entered" from="ColorRect/UI/NextButton" to="." method="button_focus_entered"]
[connection signal="pressed" from="ColorRect/UI/NextButton" to="." method="button_next"]
